syntax = "proto3";

package booksPackage;

message books {
    int32 id = 1;
    string title = 2;
    string author = 3;
    int64 published_year = 4;
}

message booksList {
    repeated books book = 1;
}

message booksId {
    int32 id_buku = 1;
}

message empty {}

service newService {
    rpc addBooks (books) returns (books) {}
    rpc getBooks (empty) returns (booksList) {}
    rpc deleteBooks (booksId) returns (empty) {}
}